--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -314,6 +314,7 @@
     "jest": "^26.6.3",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
+    "jest-mock-console": "^2.0.0",
     "jest-websocket-mock": "^2.2.0",
     "jsdom": "^20.0.0",
     "lerna": "^4.0.0",
